I've worked in the filter once more, I think that this is the last time that i work in the filters and criteria api. I going to work in the crud.

--- a/src/app/components/filter-home/filter-home.html
+++ b/src/app/components/filter-home/filter-home.html
@@ -25,10 +25,15 @@
     <select id="location" formControlName="zone">
       <option value="" disabled selected>-- Selecciona un tipo --</option>
       @for (z of zoneArray; track $index) {
-      <option>{{z.zoneName}}</option>
+      <option [ngValue]="z">
+        {{z.zoneName}},
+        {{z.cityDTO.cityName}},
+        {{z.cityDTO.provinceDTO.provinceName}},
+        {{z.cityDTO.provinceDTO.countryDTO.countryName}}
+      </option>
       }
     </select>
   </fieldset>
 
-  <button [disabled]="form.invalid" type="submit" class="btn-search" (click)="makeFilter()">Buscar</button>
+  <button [disabled]="form.invalid" type="submit" class="btn-search" >Buscar</button>
 </form>
