--- a/src/app/components/form-property/form-property.html
+++ b/src/app/components/form-property/form-property.html
@@ -34,14 +34,14 @@
                 </div>
 
                 <div class="form-group">
-                        <select name="location" required>
+                    <label>Ubicacion <span class="required">*</span></label>
+                    <select name="location" required>
                         <option value="">Seleccionar...</option>
                         @for (i of zones; track $index) {
-                        <option value="{{i.zoneName}}">{{i.zoneName}}</option>
+                        <option value="{{i.zoneName}}">{{i.zoneName}}, {{i.cityDTO.cityName}},
+                            {{i.cityDTO.provinceDTO.provinceName}}, {{i.cityDTO.provinceDTO.countryDTO.countryName}}</option>
                         }
                     </select>
-                    <label>Ubicación <span class="required">*</span></label>
-                    <input type="text" name="location" required>
                 </div>
 
                 <div class="form-group">
