Then send a e-mail to my teacher saying that I couldn't do the property and owner CRUD. I could do the form. I could make the form with sub-forms!

--- a/src/app/components/forms/form-post-property/form-post-property.css
+++ b/src/app/components/forms/form-post-property/form-post-property.css
@@ -158,7 +158,7 @@
  }
 
 
-
+form-
  /* --- CONTENEDOR PRINCIPAL: SOLUCIÓN GRID --- */
  #components-container {
      display: grid;
@@ -229,9 +229,10 @@
      /* 250px -> 15.625rem */
  }
 
-
-
  h3 {
      margin-top: 0;
      color: #1f3d7a;
  }
+
+
+
