--- a/src/app/components/forms/sub-forms/form-zone/form-zone.html
+++ b/src/app/components/forms/sub-forms/form-zone/form-zone.html
@@ -30,7 +30,7 @@
         <select formControlName="zone">
             <option value="">Seleccionar ubicación...</option>
             @for (z of zoneArray; track $index) {
-            <option [ngValue]="z.zoneName">
+            <option value="{{z.zoneName}}">
                 {{z.zoneName}},
                 {{z.cityDTO.cityName}},
                 {{z.cityDTO.provinceDTO.provinceName}},
