--- a/src/app/components/forms/sub-forms/input-images/input-images.html
+++ b/src/app/components/forms/sub-forms/input-images/input-images.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="images-grid">
-            @for (image of imagePreviews; track $index) {
+            @for (image of imagePreviews; track image.file.name) {
             <div class="image-card">
                 <img [src]="image.previewUrl" [alt]="image.file.name" class="preview-image">
                 <div class="image-overlay">
