--- a/src/app/components/forms/form-post-property/form-post-property.html
+++ b/src/app/components/forms/form-post-property/form-post-property.html
@@ -6,6 +6,7 @@
             <p class="form-subtitle">Complete los detalles de la nueva propiedad</p>
         </div>
         <button class="cancel-btn">✕ Cancelar</button>
+        <button class="cancel-btn" (click)="cargarForm()">✕ Cargar form</button>
     </div>
 
     <form id="propertyForm" [formGroup]="form" (submit)="startProcess()">
