--- a/src/app/pages/log-in/log-in.html
+++ b/src/app/pages/log-in/log-in.html
@@ -1,24 +1,32 @@
 <main class="login-wrap">
     <form class="login-card" [formGroup]="formulario" (submit)="onSumbit()">
+        <button (click)="autoLog()">Logeate!</button>
+
         <h2>Iniciar sesión</h2>
-        <button (click)="irAdmin()">Ir a administracion</button>
 
         <fieldset>
             <label for="username"> Usuario </label>
             <input id="username" type="text" placeholder="juan.pablo123" formControlName="username">
-            @if (formulario.get('username')?.hasError('required') && formulario.get('username')?.touched ) { <p class="p-error">Este campo es obligatorio</p> }
-            @else if (formulario.get('username')?.hasError('minlength') && formulario.get('username')?.touched ) { <p class="p-error">El username debe tener al menos 6 caracteres</p> }
-            @else if (formulario.get('username')?.hasError('maxlength') && formulario.get('username')?.touched ) { <p class="p-error">El username debe tener un maximo de 20 caracteres</p> }
+            @if (formulario.get('username')?.hasError('required') && formulario.get('username')?.touched ) { <p
+                class="p-error">Este campo es obligatorio</p> }
+            @else if (formulario.get('username')?.hasError('minlength') && formulario.get('username')?.touched ) { <p
+                class="p-error">El username debe tener al menos 6 caracteres</p> }
+            @else if (formulario.get('username')?.hasError('maxlength') && formulario.get('username')?.touched ) { <p
+                class="p-error">El username debe tener un maximo de 20 caracteres</p> }
             @else if (formulario.get('username')?.valid) { <p class="p-sucess">Username valido</p> }
         </fieldset>
 
         <fieldset>
             <label for="password"> Contraseña </label>
             <input id="password" type="password" placeholder="••••••••" formControlName="password">
-            @if ( this.formulario.get('password')?.hasError('required') && formulario.get('password')?.touched ) { <p class="p-error">Este campo es obligatorio</p> }
-            @else if ( this.formulario.get('password')?.hasError('minlength') && formulario.get('password')?.touched ) { <p class="p-error">La contraseña debe tener al menos 8 caracteres</p> }
-            @else if ( this.formulario.get('password')?.hasError('maxlength') && formulario.get('password')?.touched ) { <p class="p-error">La contraseña debe un maximo de 20 caracteres</p> }
-            @else if ( this.formulario.get('password')?.hasError('pattern') && formulario.get('password')?.touched ) { <p class="p-error">La contraseña debe tener al menos: 1 mayuscula, 1 numero, 1 caracter especial</p> }
+            @if ( this.formulario.get('password')?.hasError('required') && formulario.get('password')?.touched ) { <p
+                class="p-error">Este campo es obligatorio</p> }
+            @else if ( this.formulario.get('password')?.hasError('minlength') && formulario.get('password')?.touched ) {
+            <p class="p-error">La contraseña debe tener al menos 8 caracteres</p> }
+            @else if ( this.formulario.get('password')?.hasError('maxlength') && formulario.get('password')?.touched ) {
+            <p class="p-error">La contraseña debe un maximo de 20 caracteres</p> }
+            @else if ( this.formulario.get('password')?.hasError('pattern') && formulario.get('password')?.touched ) {
+            <p class="p-error">La contraseña debe tener al menos: 1 mayuscula, 1 numero, 1 caracter especial</p> }
             @else if ( this.formulario.get('password')?.valid) { <p class="p-sucess">Contraseña válida</p> }
         </fieldset>
 
