--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -22,7 +22,7 @@
 
       @if (isLogged()){
         @if(isAdmin()){
-        <button type="button" class="cta" routerLink="admin">Administracion</button>
+        <button type="button" class="cta" routerLink="admin/form-post">Administracion</button>
         }
       <button type="button" class="cta" (click)="logOut()">Log out</button>
 
