--- a/src/app/pages/admin/admin.html
+++ b/src/app/pages/admin/admin.html
@@ -4,8 +4,8 @@
             
             <ul class="nav-menu">
                 <li class="nav-item">Propiedades</li>
-                <button class="nav-item">Ver todas las propiedades</button>
-                <button class="nav-item">Añadir nueva</button>
+                <button class="nav-item" routerLink="list">Ver todas las propiedades</button>
+                <button class="nav-item" routerLink="form-post">Añadir nueva</button>
                 <li class="nav-item">Comunicaciones</li>
                 <button class="nav-item">Ver consultas de propiedades</button>
                 <button class="nav-item">Ver mensajes de contacto</button>
