--- a/src/app/pages/properties/properties.html
+++ b/src/app/pages/properties/properties.html
@@ -36,7 +36,7 @@
 
     <div class="grid">
 
-      @for (p of properties; track $index) {
+      @for (p of properties; track p.id) {
       <!-- Card 1 -->
       <article class="card">
         <div class="card-image">
