--- a/src/app/components/child-pages/property-list/property-list.html
+++ b/src/app/components/child-pages/property-list/property-list.html
@@ -11,7 +11,7 @@
                     <h1 class="content-title">Gestión de Propiedades</h1>
                     <p class="content-subtitle">Administra todas las propiedades del catálogo</p>
                 </div>
-                <button class="btn-add">
+                <button class="btn-add" (click)="goToPost()">
                     <svg width="16" height="16" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
                     </svg>
@@ -20,6 +20,17 @@
             </div>
 
             <div class="filters">
+                <div class="pagination pagination--minimal">
+                    <button class="pagination__button" id="prevBtn2" (click)="changePage(false)">
+                        ‹
+                    </button>
+                    <span class="pagination__info">
+                        Página <span>{{pageSelected}}</span> de <span>{{lastPage}}</span>
+                    </span>
+                    <button class="pagination__button" id="nextBtn2" (click)="changePage(true)">
+                        ›
+                    </button>
+                </div>
                 <div class="filter-input">
                     <svg width="16" height="16" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -63,8 +74,7 @@
                         <tr>
                             <td>
                                 <div class="property-cell">
-                                    <img [src]="item.mainImage"
-                                        alt="Mansión" class="property-img">
+                                    <img [src]="item.mainImage" alt="Mansión" class="property-img">
                                     <div class="property-info">
                                         <div class="property-title">{{item.title}}</div>
                                     </div>
@@ -73,11 +83,12 @@
                             <td><span class="badge badge-venta">{{item.propertyTypeDTO.typeName}}</span></td>
                             <td class="price">{{item.price}}</td>
                             <td class="location">{{item.zoneDTO.zoneName}}, {{item.zoneDTO.cityDTO.cityName}}</td>
-                            <td class="characteristics">{{item.bedrooms}} hab • {{item.bathrooms}} baños • {{item.totalArea}}m²</td>
+                            <td class="characteristics">{{item.bedrooms}} hab • {{item.bathrooms}} baños •
+                                {{item.totalArea}}m²</td>
                             <td><span class="badge badge-disponible">{{item.operationTypeDTO.operationName}}</span></td>
                             <td>
                                 <div class="actions">
-                                    <button class="icon-btn icon-view">
+                                    <button class="icon-btn icon-view" (click)="goToDetail(item)">
                                         <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                                 d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
@@ -91,7 +102,7 @@
                                                 d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
                                         </svg>
                                     </button>
-                                    <button class="icon-btn icon-delete">
+                                    <button class="icon-btn icon-delete" (click)="goToDelete(item)">
                                         <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                                 d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
@@ -100,7 +111,7 @@
                                 </div>
                             </td>
                         </tr>
-                    }
+                        }
                     </tbody>
                 </table>
             </div>
