--- a/src/app/pages/admin/admin.html
+++ b/src/app/pages/admin/admin.html
@@ -1,20 +1,25 @@
 <div class="layout">
-        <!-- SIDEBAR -->
-        <aside class="sidebar">
-            
-            <ul class="nav-menu">
-                <li class="nav-item">Propiedades</li>
-                <button class="nav-item" routerLink="list">Ver todas las propiedades</button>
-                <button class="nav-item" routerLink="form-post">Añadir nueva</button>
-                <li class="nav-item">Comunicaciones</li>
-                <button class="nav-item">Ver consultas de propiedades</button>
-                <button class="nav-item">Ver mensajes de contacto</button>
-            </ul>
+    <!-- SIDEBAR -->
+    <aside class="sidebar">
 
-        </aside>
+        <ul class="nav-menu">
+            <li class="nav-item">Propiedades</li>
+            <button class="nav-item" routerLink="property-list">Ver todas las propiedades</button>
+            <button class="nav-item" routerLink="form-post">Añadir nueva</button>
+            <li class="nav-item">Comunicaciones</li>
+            <button class="nav-item">Ver consultas de propiedades</button>
+            <button class="nav-item">Ver mensajes de contacto</button>
+            <li class="nav-item">Configuracion de usuarios</li>
+            <button class="nav-item" routerLink="../register">Registrar nuevo usuario</button>
+            <button class="nav-item" routerLink="/user-detail">Ver un usario</button>
+            <button class="nav-item">Actualizar un usario</button>
+            <button class="nav-item">Eliminar un usario</button>
+        </ul>
 
-        <!-- MAIN CONTENT -->
-        <main class="main-content">
+    </aside>
+
+    <!-- MAIN CONTENT -->
+    <main class="main-content">
         <router-outlet></router-outlet>
-        </main>
-    </div>
+    </main>
+</div>
