--- a/src/app/pages/properties/properties.html
+++ b/src/app/pages/properties/properties.html
@@ -38,7 +38,7 @@
 
       @for (p of properties; track p.id) {
       <!-- Card 1 -->
-      <article class="card">
+      <article class="card" (click)="goToDetail(p)">
         <div class="card-image">
           <img [src]="p.mainImage" alt="Propiedad en venta">
           <span class="badge">{{p.operationTypeDTO.operationName}}</span>
